# case-check-city-snap

./: .gitignore  README.md  open_street_map.http  package-lock.json  package.json  path.patch
.github/workflows/: backend-ci.yml
city-snap-backend/: README.md  pyproject.toml
city-snap-backend/src/citysnap/app/: __init__.py  main.py  settings.py
city-snap-backend/src/citysnap/app/routers/: __init__.py  buildings.py
city-snap-backend/src/citysnap/app/schemas/: __init__.py  building.py
city-snap-backend/src/citysnap/app/services/: __init__.py  building_data.py  building_info.py  exceptions.py  geocoding.py  llm.py  llm_enricher.py  llm_providers.py  open_street_map.py  storage.py
city-snap-backend/tests/citysnap/app/routers/: test_buildings.py
city-snap-backend/tests/citysnap/app/services/: test_building_data.py  test_geocoding.py  test_llm.py  test_open_street_map.py
city-snap-frontend/: building_info.html  eslint.config.js  index.html  package-lock.json  package.json  styles.css  vite.config.ts
city-snap-frontend/src/: App.tsx  main.tsx
city-snap-frontend/src/api/: buildingService.ts
city-snap-frontend/src/components/: BuildingInfoCard.tsx  ErrorMessage.tsx  Footer.tsx  Header.tsx  LoadingSpinner.tsx  MapPreview.tsx  SearchForm.tsx
city-snap-frontend/src/hooks/: useBuildingQuery.ts
city-snap-frontend/src/pages/: BuildingPage.tsx  SearchPage.tsx
city-snap-frontend/src/router/: AppRouter.tsx
city-snap-frontend/src/styles/: style.css
city-snap-frontend/src/types/: building.ts
frontend/: dev-server.js
gateway_service/: README.md  poetry.toml  pyproject.toml
gateway_service/src/citysnap/app/: dependencies.py
gateway_service/src/citysnap/app/routers/: buildings.py  health.py
gateway_service/src/citysnap/app/schemas/: building.py
gateway_service/src/citysnap/app/services/: __init__.py  exceptions.py  geocoding.py
(+3 files in other folders)
